--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,16 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>1.3.0</version>
+        <!-- configuration>
+          <to>
+            <image>myimage</image>
+          </to>
+        </configuration -->
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <executions>
